--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,6 @@ name: ci
 on:
   push:
     branches:
-      - master
       - main
 permissions:
   contents: write
@@ -13,8 +12,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Configure Git Credentials
         run: |
-          git config EyeTrading github-actions[bot]
-          git config eyetrading77@Gmail.com 41898282+github-actions[bot]@users.noreply.github.com
+          git config eyetrading github-actions[bot]
+          git config eyetrading77@gmail.com 41898282+github-actions[bot]@users.noreply.github.com
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
