--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,9 @@
 site_name: EyeTrading
 site_url: https://eyetrading.github.io/
+# Repository
+repo_name: EyeTrading/eyetrading.github.io
+repo_url: https://github.com/eyetrading/eyetrading.github.io
+
 nav:
   - Home: index.md
   - About: about.md
