--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,10 +6,17 @@ repo_url: https://github.com/eyetrading/eyetrading.github.io
 
 nav:
   - Home: index.md
+  - 使用說明:
+    - 安裝與設定: guides/index.md
+    - 軟體畫面: guides/screen_eyetrading.md
+    - 下單畫面: guides/screen_flashbot.md
+  - 免責聲明: disclaimer.md
   - About: about.md
+  
 theme:
   name: material
   language: zh-TW
+  logo: assets/logo.png
   palette:
     - media: "(prefers-color-scheme: light)"
       scheme: default
@@ -51,3 +58,5 @@ extra:
 copyright: Copyright &copy; 2023 - 2024 EyeTrading
 markdown_extensions:
   - admonition
+  - attr_list
+  - md_in_html
